# metarcwa

./: LICENSE  README.md  config.yaml  eigensolver_test.ipynb  example.ipynb  homogeneous_tests.ipynb  model_test.ipynb  model_tests.ipynb  pyproject.toml  test.ipynb  test_final.py  test_git_flow.md  test_solver.ipynb  test_source.ipynb  tvf_playground.ipynb  tvf_test.ipynb
.ipynb_checkpoints/: example-checkpoint.ipynb
docs/: blockmatrix.md  eigenproblem.md  factorization.md  homogeneous.md  rcwa_core.md  smatrix.md  tvf.md
metarcwa/model/: base.py  lattice.py  layer.py  material.py  stack.py  utils.py
metarcwa/solver/: base.py  config.py
src/: backend.py  compute.py  config.py  geometry.py  kvector.py  layer.py  layersolver.py  material.py  material_func_fourier.py  sim.py  source.py  tvf.py
src/backend/: __init__.py  base.py  jax.py  numpy.py  torch.py
src/metarcwa/: __init__.py  config.py
src/model/: __init__.py  layer.py  material.py  model.py  source.py
src/solver/: __init__.py  config.py  layersolver.py  solver.py
tests/: backend.py  compute.py  geometry.py  help.py  kvector.py  layer.py  test_eps_fn.py  test_homogeneous.py  test_layer.py  test_model.py  test_shape_fn.py  torch_eig_gpu_bench.py
tests/.ipynb_checkpoints/: test_layer-checkpoint.py
tests/model/: conftest.py  test_layer.py  test_medium.py  test_stack.py  test_utils.py  utils.py
tests/solver/: test_blockmatrix.py  test_convolution.py  test_harmonics.py  test_homogeneous.py  test_isotropic.py  test_layersolver.py  test_smatrix.py  test_solver.py  test_tvf.py
(+53 files in other folders)
