[project]
name = "metarcwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
]

[project.optional-dependencies]
metashapes = ["metashapes"]
dispertorch = ["dispertorch"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
metashapes = { git = "https://github.com/RodionovSA/metashapes.git" }
dispertorch = { git = "https://github.com/RodionovSA/dispertorch.git" }
